# leapsake

./: .dockerignore  .env.local  .gitignore  AGENTS.md  CNAME  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: astro.yml  deploy-leapsake.com.yml
apps/client-desktop/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/client-desktop/src/: App.tsx  hooks.ts  types.ts  utils.ts
apps/client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-desktop/src-tauri/capabilities/: default.json
apps/client-desktop/src-tauri/src/: lib.rs  main.rs  utils.rs
apps/client-mobile/: app.json  metro.config.js  package.json
apps/client-mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
apps/client-web/: Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  project.json  tsconfig.json
apps/client-web/.next/: app-build-manifest.json  trace
apps/client-web/.next/cache/: .rscinfo
apps/client-web/.next/server/: app-paths-manifest.json  (+2 more)
apps/client-web/src/: actions.ts  hooks.ts  types.ts  utils.ts
apps/leapsake.com/: package.json  tsconfig.json
apps/server/: .migrationrc.json  Dockerfile  Dockerfile.dev  drizzle.config.ts  package.json  tsconfig.app.json  webpack.config.js
apps/server-e2e/: jest.config.ts  package.json  tsconfig.json
apps/server/src/: handlers.ts  main.ts  utils.ts
apps/site-leapsake.com/: astro.config.mjs  package.json
(+224 files in other folders)
